# yui-drop

./: .env.example  .gitignore  Dockerfile  LICENSE  README.en.md  README.ja.md  README.md  README.zh-CN.md  README.zh.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260512_0109_initial_schema.py  20260512_0250_share_files_multi_share_fields.py
backend/app/: main.py
backend/app/api/: admin.py  chunk.py  deps.py  presign.py  public.py  share.py  share_multi.py  shortlink.py
backend/app/core/: config.py  crypto.py  filenames.py  logging.py  rate_limit.py  request_ip.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  access_log.py  file_code.py  multipart_session.py  settings_kv.py  share_file.py  upload_chunk.py
backend/app/schemas/: __init__.py  chunk.py  common.py  presign.py  share.py
backend/app/services/: __init__.py  admin.py  admin_storage.py  admin_turnstile.py  admin_uploads.py  chunk.py  common.py  presign.py  retention.py  share.py  share_multi.py  turnstile.py
backend/app/storage/: __init__.py  base.py  factory.py  local.py  onedrive.py  s3.py  webdav.py
backend/tests/: __init__.py  conftest.py  test_access_log_toggle.py  test_audit_toggle.py  test_crypto.py  test_request_ip.py  test_storage_factory.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: TurnstileWidget.tsx
frontend/src/i18n/: en.json  index.ts  ja.json  normalize.ts  supported.ts  zh-CN.json
frontend/src/lib/: api.ts  clipboard.ts  cn.ts  format.ts  recent.ts  (+2 more)
scripts/: install.sh
(+63 files in other folders)
